force-app/main/default/objects/Account/fields/AnalysisTrendCreditworthinessNarrat__c.field-meta.xml
<CustomField>
    <fullName>AnalysisTrendCreditworthinessNarrat__c</fullName>
    <label>Analysis Trend - Creditworthiness Narrat</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>