force-app/main/default/objects/Account/fields/AnalysisTrendOwnershipChangeNarrat__c.field-meta.xml
<CustomField>
    <fullName>AnalysisTrendOwnershipChangeNarrat__c</fullName>
    <label>Analysis Trend - Ownership Change Narrat</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>