force-app/main/default/objects/Account/fields/AnalysisTrendRLOCNarrative__c.field-meta.xml
<CustomField>
    <fullName>AnalysisTrendRLOCNarrative__c</fullName>
    <label>Analysis Trend - RLOC Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>