force-app/main/default/objects/Account/fields/AssessedValuationsTop10TaxPayers__c.field-meta.xml
<CustomField>
    <fullName>AssessedValuationsTop10TaxPayers__c</fullName>
    <label>Assessed Valuations, Top 10 Tax Payers</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>