force-app/main/default/objects/Account/fields/BondRatingNarrative__c.field-meta.xml
<CustomField>
    <fullName>BondRatingNarrative__c</fullName>
    <label>Bond Rating Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>