force-app/main/default/objects/Account/fields/cm_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>cm_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>