force-app/main/default/objects/Account/fields/CustomerSince__c.field-meta.xml
<CustomField>
    <fullName>CustomerSince__c</fullName>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>