force-app/main/default/objects/Account/fields/DebtSummaryNarrative__c.field-meta.xml
<CustomField>
    <fullName>DebtSummaryNarrative__c</fullName>
    <label>Debt Summary Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>