force-app/main/default/objects/Account/fields/Estimated_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Annual_Revenue__c</fullName>
    <description>Estimated annual revenue captured in online application from customer and from relationship officer for in-branch.  Used for deposits and then validated in the Annual Revenue field for loans after an underwriter has completed spreading.</description>
    <label>Estimated Annual Revenue</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>