force-app/main/default/objects/Account/fields/EXUS__Business_Credit_Product__c.field-meta.xml
<CustomField>
    <fullName>EXUS__Business_Credit_Product__c</fullName>
    <description>Users populate this picklist field with the product required to pull Experian business credit. Financial Institutions can set a default value if desired.</description>
    <label>Experian Business Credit Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intelliscore</fullName>
            </value>
            <value>
                <fullName>PremierProfile</fullName>
                <label>Premier Profile</label>
            </value>
            <value>
                <fullName>SBCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>