force-app/main/default/objects/Account/fields/ffin_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>ffin_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>