force-app/main/default/objects/Account/fields/Full_Legal_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Full_Legal_Name_Formula__c</fullName>
    <description>This field is populated based on First Name and Last Name for Person Accounts.  Non-Person Accounts utilize Relationship Name</description>
    <formula>IF(
IsPersonAccount,
FirstName &amp; &quot; &quot; &amp; &quot; &quot; &amp; LastName,
Name
)</formula>
    <label>Full Legal Name</label>
    <type>Text</type>
</CustomField>