force-app/main/default/objects/Account/fields/IndustryDataAwardsNarrative__c.field-meta.xml
<CustomField>
    <fullName>IndustryDataAwardsNarrative__c</fullName>
    <label>Industry Data &amp; Awards Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>