force-app/main/default/objects/Account/fields/Is_this_a_Test__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Test__c</fullName>
    <inlineHelpText>Please denote if this is a Test Record.</inlineHelpText>
    <label>Is this a Test?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>