force-app/main/default/objects/Account/fields/JHJX__AllowDuplicateCIF__c.field-meta.xml
<CustomField>
    <fullName>JHJX__AllowDuplicateCIF__c</fullName>
    <label>Allow Duplicate CIF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>