force-app/main/default/objects/Account/fields/JHJX__CustCode__c.field-meta.xml
<CustomField>
    <fullName>JHJX__CustCode__c</fullName>
    <description>The Users populate this optional picklist field to further define the customer. By default, it is blank.</description>
    <label>Class Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>A - Association/Organization</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>B - Business</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>C - Corporation</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>D - Deposit Institution</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>E - Estate</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>F - Fiduciary Organization</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>G - Conserv/Guard</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>I - Individual/Entity</label>
            </value>
            <value>
                <fullName>K</fullName>
                <label>K - Landlord</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>L - Limited Liability Corporation</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>M - Partnership</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>N - Non Profit</label>
            </value>
            <value>
                <fullName>O</fullName>
                <label>O - IOLTA</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>P - Personal</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Q - Fed Fiduciary</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>R - Rep Payee</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>S - Sole Proprietor</label>
            </value>
            <value>
                <fullName>T</fullName>
                <label>T - Irrevocable Trust</label>
            </value>
            <value>
                <fullName>U</fullName>
                <label>U - TNUTMA</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>V - Revocable Trust</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>X - Power of Attorney</label>
            </value>
            <value>
                <fullName>Z</fullName>
                <label>Z - Public Funds</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>