force-app/main/default/objects/Account/fields/LeverageNarrative__c.field-meta.xml
<CustomField>
    <fullName>LeverageNarrative__c</fullName>
    <label>Leverage Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>