force-app/main/default/objects/Account/fields/LLC_BI__Automated_Financials__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Automated_Financials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to indicate if the Relationship or Account is signed up for Automated Financial System submission of interim financials. Checkbox used to indicate status.</description>
    <label>Automated Financials</label>
    <type>Checkbox</type>
</CustomField>