force-app/main/default/objects/Account/fields/LLC_BI__Branch__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to look up to the Bank Branch in which this account is associated to.</description>
    <label>Branch</label>
    <referenceTo>LLC_BI__Branch__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>