force-app/main/default/objects/Account/fields/LLC_BI__Comments__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Comments__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is a long text field used for comments regarding Relationship or Account. It is available for notes or comments about the Relationship or Account.</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>