force-app/main/default/objects/Account/fields/LLC_BI__Committed_Affiliated_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Committed_Affiliated_Exposure__c</fullName>
    <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Committed Affiliated Exposure to this Relationship or Account.</description>
    <label>Committed Affiliated Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>