force-app/main/default/objects/Account/fields/LLC_BI__Current_Situation__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Current_Situation__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is a long text field used as a text description of current situation of this Relationship or Account.</description>
    <label>Current Situation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>