force-app/main/default/objects/Account/fields/LLC_BI__CustomerPriority__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CustomerPriority__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. This field is used to specify the priority associated with this Relationship or Account, for example, High, Medium, or Low. The value provided must match one of the values in the Customer Priority list established for this organization.</description>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>