force-app/main/default/objects/Account/fields/LLC_BI__FICO_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__FICO_Date__c</fullName>
    <description>This field is optional. It is populated automatically by the Credit Services integration. This field is used to specify the date of most recent FICO score inquiry.</description>
    <label>FICO Date</label>
    <type>Date</type>
</CustomField>