force-app/main/default/objects/Account/fields/LLC_BI__Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fiscal_Year_End__c</fullName>
    <description>This field is optional. It is populated when the user chooses a Fiscal Year End in spreads. In Spreads, this date is used to evaluate if 12 month periods are also fiscal years.</description>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>