force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_NFFE_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_NFFE_Type__c</fullName>
    <description>This field is optional. It is populated by a user or a data integration. It indicates whether the beneficial owner is the NFFE corporation in question, or the affiliate of said corporation, as prescribed and certified by IRS forms W-8.</description>
    <inlineHelpText>Indicates whether the beneficial owner is the NFFE corporation in question, or the affiliate of said corporation, as prescribed and certified by IRS forms W-8.</inlineHelpText>
    <label>Form W8 NFFE Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Publicly-Traded NFFE (not an affiliate)</fullName>
            </value>
            <value>
                <fullName>Affiliate of Publicly-Traded NFFE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>