force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Owner_Trust_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Owner_Trust_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. It indicates the beneficial owner certifies it is an owner-documented FFI that is also a Trust without contingent or other unidentified beneficiaries, as prescribed by IRS forms W-8.</description>
    <inlineHelpText>Indicates the beneficial owner certifies it is an owner-documented FFI that is also a Trust without contingent or other unidentified beneficiaries, as prescribed by IRS forms W-8.</inlineHelpText>
    <label>Form W8 Owner Trust Indicator</label>
    <type>Checkbox</type>
</CustomField>