force-app/main/default/objects/Account/fields/LLC_BI__Form_W8_Signer_Indicator__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Form_W8_Signer_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is optional. It is populated by a user or a data integration. It identifies an individual signer for a (non-US) entity who can (and will certify that they can) sign Forms W-8 on behalf of the entity.</description>
    <inlineHelpText>Identifies an individual signer for a (non-US) entity who can (and will certify that they can) sign Forms W-8 on behalf of the entity.</inlineHelpText>
    <label>Form W8 Signer Indicator</label>
    <type>Checkbox</type>
</CustomField>